2009-10-05	Olivier Bilodeau <obilodeau@inverse.ca>
	* conf/templates/httpd.conf.apache22,
	conf/templates/httpd.conf.pre_apache22: Fixed the omission of a banned
	UserAgent from the https portion of the httpd config. Thanks Regis for
	pointing that out!

2009-10-02	Olivier Bilodeau <obilodeau@inverse.ca>
	* Added pf/addons/high-availability/dhcpd-3.0.5-init-script-lsb-fix.patch:
	Little patch to fix LSB compliance of dhcpd's init script. Non-compliant init 
	scripts generate scary error messages in Heartbeat. 

	* pf/conf/log.conf: Logging priority now shown in log files

	* pf/lib/pf/SNMP/Enterasys/SecureStack_C3.pm, pf/README_SWITCHES: Added
	support for Enterasys SecureStack C3 Switch
	It works in linkUp/linkDown mode and port-security (called maclock on
	Enterasys hardware). Talks to the switch using SNMP.
	
	* pf/docs/PacketFence_Administration_Guide.odt: Added instructions to
	setup the SecureStack C3
	Updated supported switches list
	Added comments about cleanup to do
	Minor formatting / whitespace cleanup

2009-09-28	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Enterasys/Matrix_N3.pm, pf/README_SWITCHES,
	pf/docs/PacketFence_Administration_Guide.odt: Added support for
	Enterasys Matrix N3 Switch (Chassis)
	It works in linkUp/linkDown mode and port-security (called maclock on
	Enterasys hardware). Talks to the switch using SNMP.
	Documentation on how to configure was added to the admin guide.

	* pf/lib/pf/SNMP/Enterasys.pm: Fix for maclock support (Enterasys' port
	security): Trap string had a typo in parseTrap()

	* pf/bin/pfcmd: Fixed a typo in a comment

2009-09-24	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Clarification of the
	vlan parameter in violations.conf

2009-09-22	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/HP.pm: Removed unused code

2009-09-18	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: New switch config