@@ -79,7 +79,7 @@ sub getTrunkPorts {
     my $logger = Log::Log4perl::get_logger( ref($this) );
 
     if ( !$this->connectRead() ) {
-        return @trunkPorts;
+        return -1;
     }
     $logger->trace("SNMP get_table for vlanPortMode: $OID_vlanPortMode");
     my $result
@@ -95,6 +95,7 @@ sub getTrunkPorts {
     } else {
         $logger->error(
             "Problem while reading vlanPortMode for switch " . $this->{_ip} );
+        return -1;
     }
     return @trunkPorts;
 }
