@@ -1,6 +1,12 @@
 2009-10-05	Olivier Bilodeau <obilodeau@inverse.ca>
-	* conf/templates/httpd.conf.apache22,
-	conf/templates/httpd.conf.pre_apache22: Fixed the omission of a banned
+	* pf/lib/pf/SNMP/Accton.pm, pf/lib/pf/SNMP/Cisco.pm, 
+	pf/lib/pf/SNMP/Linksys.pm, pf/lib/pf/SNMP/Nortel.pm, pf/lib/pf/SNMP.pm:
+	Various getUpLinks() subs didn't respect the "return -1 on failure" 
+	contract. Fixes #795;
+	http://www.packetfence.org/mantis/view.php?id=795
+
+	* pf/conf/templates/httpd.conf.apache22,
+	pf/conf/templates/httpd.conf.pre_apache22: Fixed the omission of a banned
 	UserAgent from the https portion of the httpd config. Thanks Regis for
 	pointing that out!
 
